# steel-plate

./: .gitignore  Cargo.toml  README.md
src/public/: index.html
src/public/src_raw/: fox_style_a.xcf  fox_style_b.xcf
