[package]
name = "steel-plate"
version = "0.1.0"
edition = "2021"
autobins = false
authors = ["Richard Chen (iochen.com)"]
description = "Steel Plate for Arctic Fox, similar to POPCAT"
readme = "README.md"
homepage = "https://github.com/iochen/steel-plate"
repository = "https://github.com/iochen/steel-plate"
license = "MIT"
exclude = [
    "src/public/src_raw/*",
    "rust.zip",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "6.4.0"
hyper = { version = "0.14.20", features = ["server", "tcp", "http1"] }
serde_json = "1.0.82"
gtmpl = "0.7.1"
minify-html = "0.9.2"
tokio = { version = "1.20.1", features = ["full"] }
lambda_runtime = "0.6.0"
hegel = "0.1.0"
lazy_static = "1.4.0"
serde_derive = "1.0.140"
base64 = "0.13.0"
aws-config = "0.46.0"
aws-sdk-dynamodb = "0.16.0"
async_once = "0.2.6"

[[bin]]
name = "bootstrap"
path = "src/bin/steel-plate-aws-lambda.rs"

[[bin]]
name = "steel-plate"
path = "src/bin/steel-plate-standalone.rs"